Add css instead of tailwind

--- a/personal-interest/index.html
+++ b/personal-interest/index.html
@@ -4,114 +4,95 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interest</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./index.css" />
   </head>
-
-  <body class="bg-black h-screen flex items-center justify-center">
-    <div class="grid bg-black grid-cols-3 gap-4">
-      <!-- 1 container -->
-      <div class="card p-4 border hover:scale-110 transition-transform">
-        <div class="text-center text-white text-xl pb-2">Cricket</div>
-        <div
-          class="card-content opacity-100 transition-opacity"
-          id="interest1-details"
-        >
-          <img
-            src="https://d3nn873nee648n.cloudfront.net/900x600/19366/220-SM922123.jpg"
-            alt="Cricket image"
-            width="250px"
-          />
-        </div>
-      </div>
-
-      <!-- 2  -->
-      <div class="card p-4 border hover:scale-110 transition-transform">
-        <div class="text-center text-white text-xl pb-2">Travel</div>
-        <div
-          class="card-content opacity-100 transition-opacity"
-          id="interest2-details"
-        >
-          <img
-            src="https://d3nn873nee648n.cloudfront.net/900x600/19817/300-SM966202.jpg"
-            alt="travel image"
-            width="250px"
-            height="250px"
-          />
-        </div>
-      </div>
-
-      <!-- 3 -->
-      <div class="card p-4 border hover:scale-110 transition-transform">
-        <div class="text-center text-white text-xl pb-2">Stock</div>
-        <div
-          class="card-content opacity-100 transition-opacity"
-          id="interest1-details"
-        >
-          <img
-            src="https://d3nn873nee648n.cloudfront.net/900x600/17309/220-SM763306.jpg"
-            alt=""
-            width="250px"
-            height="250px"
-            class="hover: transition-transform hover:scale-110"
-          />
-        </div>
-      </div>
-
-      <!-- 4  -->
-
-      <div class="card p-4 border hover:scale-110 transition-transform">
-        <div class="text-center text-white text-xl pb-2">Real Estate</div>
-        <div
-          class="card-content opacity-100 transition-opacity"
-          id="interest1-details"
-        >
-          <img
-            src="https://d3nn873nee648n.cloudfront.net/900x600/20501/300-PA1052749.jpg"
-            alt=""
-            width="250px"
-            height="250px"
-            class="hover: transition-transform hover:scale-110"
-          />
-        </div>
-      </div>
-
-      <!-- 5 -->
-
-      <div class="card p-4 border hover:scale-110 transition-transform">
-        <div class="text-center text-white text-xl pb-2">Cooking</div>
-        <div
-          class="card-content opacity-100 transition-opacity"
-          id="interest1-details"
-        >
-          <!-- Add content for Interest 1 -->
-          <img
-            src="https://d3nn873nee648n.cloudfront.net/900x600/17255/4-SM758710.jpg"
-            alt=""
-            width="250px"
-            height="250px"
-            class="hover: transition-transform hover:scale-105"
-          />
-        </div>
-      </div>
-
-      <!-- 6 -->
-      <div class="card p-4 border hover:scale-110 transition-transform">
-        <div class="text-center text-white text-xl pb-2">Music</div>
-        <div
-          class="card-content opacity-100 transition-opacity"
-          id="interest1-details"
-        >
-          <img
-            src="https://d3nn873nee648n.cloudfront.net/900x600/20386/7-PA1050012.jpg"
-            alt=""
-            width="250px"
-            height="250px"
-            class="hover: transition-transform hover:scale-110"
-          />
-        </div>
-      </div>
+  <body>
+    <div class="heading">
+      <h1 class="heading-contain">My interest</h1>
     </div>
-    <script src="index.js"></script>
+    <div class="main">
+      <div class="grid">
+        <!-- 1 container -->
+        <div class="card">
+          <div>Cricket</div>
+          <div class="card-content">
+            <img
+              src="https://d3nn873nee648n.cloudfront.net/900x600/19366/220-SM922123.jpg"
+              alt="Cricket image"
+              width="250px"
+              height="250px"
+            />
+          </div>
+        </div>
+
+        <!-- 2  -->
+        <div class="card">
+          <div>Travel</div>
+          <div class="card-content">
+            <img
+              src="https://d3nn873nee648n.cloudfront.net/900x600/19817/300-SM966202.jpg"
+              alt="travel image"
+              width="250px"
+              height="250px"
+            />
+          </div>
+        </div>
+
+        <!-- 3 -->
+        <div class="card">
+          <div>Stock</div>
+          <div class="card-content">
+            <img
+              src="https://d3nn873nee648n.cloudfront.net/900x600/17309/220-SM763306.jpg"
+              alt="stock image"
+              width="250px"
+              height="250px"
+            />
+          </div>
+        </div>
+
+        <!-- 4  -->
+
+        <div class="card">
+          <div>Real Estate</div>
+          <div class="card-content">
+            <img
+              src="https://d3nn873nee648n.cloudfront.net/900x600/20501/300-PA1052749.jpg"
+              alt="real estate"
+              width="250px"
+              height="250px"
+            />
+          </div>
+        </div>
+
+        <!-- 5 -->
+
+        <div class="card">
+          <div>Cooking</div>
+          <div class="card-content">
+            <img
+              src="https://d3nn873nee648n.cloudfront.net/900x600/17255/4-SM758710.jpg"
+              alt="cooking"
+              width="250px"
+              height="250px"
+            />
+          </div>
+        </div>
+
+        <!-- 6 -->
+        <div class="card">
+          <div>Music</div>
+          <div class="card-content">
+            <img
+              src="https://d3nn873nee648n.cloudfront.net/900x600/20386/7-PA1050012.jpg"
+              alt="music"
+              width="250px"
+              height="250px"
+            />
+          </div>
+        </div>
+      </div>
+      <script src="index.js"></script>
+    </div>
   </body>
 </html>
